Fix gtk_source_buffer_sort_lines()

The start iterator needs to be moved to the
start of the line for gtk_text_iter_delete().
Also, return early if the start and end iter
are on the same line.

https://bugzilla.gnome.org/show_bug.cgi?id=771373